--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "typecheck": "pnpm -r typecheck"
   },
   "devDependencies": {
+    "@types/node": "^22.14.1",
     "typescript": "^5.0.0"
   },
   "simple-git-hooks": {
