feat(editor): 添加Konva编辑器组件及依赖
- 新增Konva编辑器组件，包括Header、Sider、Props等子组件
- 更新package.json以添加@plux/konva-editor和es-toolkit依赖
- 修改Layout布局样式以适配编辑器
- 添加shape相关类型定义和菜单配置

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "dev:admin": "pnpm --filter admin dev",
     "dev:server": "pnpm --filter server start:dev",
+    "dev:editor": "pnpm --filter konva-editor dev",
     "dev:site": "pnpm --filter site dev",
     "build": "pnpm -r build",
     "lint": "pnpm -r lint",
@@ -30,8 +31,11 @@
       "body-max-line-length": [
         0,
         "always",
-        12000
+        200
       ]
     }
+  },
+  "dependencies": {
+    "@rollup/plugin-json": "^6.1.0"
   }
 }
