--- a/packages/konva-editor/package.json
+++ b/packages/konva-editor/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "konva-editor",
+  "name": "@plux/konva-editor",
   "version": "1.0.0",
   "description": "基于Konva的绘图工具",
   "main": "dist/index.js",
