--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -19,7 +19,9 @@
     "tailwindcss-rem2px-preset": "^1.0.3",
     "postcss": "^8.4.21",
     "autoprefixer": "^10.4.16",
-    "postcss-px-to-viewport": "^1.1.1"
+    "@plux/konva-editor": "workspace:*",
+    "postcss-px-to-viewport": "^1.1.1",
+    "es-toolkit": "^1.34.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
