--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -10,18 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.2.2",
+    "@plux/konva-editor": "workspace:*",
+    "antd": "^5.24.7",
+    "autoprefixer": "^10.4.16",
+    "canvas": "^3.1.0",
+    "es-toolkit": "^1.34.1",
+    "postcss": "^8.4.21",
+    "postcss-px-to-viewport": "^1.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^6.16.0",
-    "antd": "^5.24.7",
-    "@ant-design/icons": "^5.2.2",
     "tailwindcss": "^3.4.17",
-    "tailwindcss-rem2px-preset": "^1.0.3",
-    "postcss": "^8.4.21",
-    "autoprefixer": "^10.4.16",
-    "@plux/konva-editor": "workspace:*",
-    "postcss-px-to-viewport": "^1.1.1",
-    "es-toolkit": "^1.34.1"
+    "tailwindcss-rem2px-preset": "^1.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
