chore: 将构建输出目录从dist更改为konvaEditor
为了统一项目中的输出目录命名，将构建输出目录从dist更改为konvaEditor。同时更新了.gitignore、rollup.config.js和package.json中的相关配置。

--- a/packages/konva-editor/package.json
+++ b/packages/konva-editor/package.json
@@ -2,13 +2,13 @@
   "name": "@plux/konva-editor",
   "version": "1.0.0",
   "description": "基于Konva的绘图工具",
-  "main": "dist/index.js",
-  "module": "dist/index.esm.js",
-  "types": "dist/index.d.ts",
+  "main": "konvaEditor/index.js",
+  "module": "konvaEditor/index.esm.js",
+  "types": "konvaEditor/index.d.ts",
   "scripts": {
     "dev": "rollup -c -w",
     "build": "rollup -c",
-    "serve": "serve -s dist"
+    "serve": "serve -s konvaEditor"
   },
   "keywords": [
     "konva",
