--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     }
   },
   "dependencies": {
-    "@rollup/plugin-json": "^6.1.0"
+    "@rollup/plugin-json": "^6.1.0",
+    "es-toolkit": "^1.34.1"
   }
 }
